--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@webgpu/types": "^0.1.64",
     "typescript": "~5.8.3",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-glsl": "^1.5.1"
   },
   "dependencies": {
     "@types/node": "^24.3.0"
