--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
 
-    "types": ["@webgpu/types"],
+    "types": ["@webgpu/types", "vite-plugin-glsl/ext"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
